--- a/01.Rmd
+++ b/01.Rmd
@@ -16,11 +16,13 @@ However, mountains of data about those guests is already available in the hotel 
 
 <!--```{r machine-learning,echo=FALSE,fig.cap='[Hotel Loyalty Programs](https://www.smartertravel.com/2017/04/12/best-hotel-loyalty-programs-2017/)',fig.align='center',out.width='80%'}
 knitr::include_graphics('https://www.smartertravel.com/uploads/2017/04/Ed-Choice-Hotel-Rewards-1024x768.jpg')
-```-->
+```
+<img src="https://www.smartertravel.com/uploads/2017/04/Ed-Choice-Hotel-Rewards-1024x768.jpg" alt="Hotel Loyalty Programs" width="560" height="480"> -->
 
 <p align="center">
-<img src="https://www.smartertravel.com/uploads/2017/04/Ed-Choice-Hotel-Rewards-1024x768.jpg" alt="Hotel Loyalty Programs" width="530" height="480">
+<a href="hotel">https://www.smartertravel.com/2017/04/12/best-hotel-loyalty-programs-2017/ 1</a>
 </p>
+
 
 
 ## Existing Data Plus Data Science Technics can Lead to a Better Understanding of Guests.
