--- a/01.Rmd
+++ b/01.Rmd
@@ -21,7 +21,9 @@ knitr::include_graphics('https://www.smartertravel.com/uploads/2017/04/Ed-Choice
 
 <p align="center">
 <img src="https://www.smartertravel.com/uploads/2017/04/Ed-Choice-Hotel-Rewards-1024x768.jpg" alt="Hotel Loyalty Programs" width="560" height="480">
-<a href="hotel">https://www.smartertravel.com/2017/04/12/best-hotel-loyalty-programs-2017/ 1</a>
+</p>
+<p align="center">
+<a href="https://www.smartertravel.com/2017/04/12/best-hotel-loyalty-programs-2017"> Hotel Loyalty Program </a>
 </p>
 
 
